--- a/index.html
+++ b/index.html
@@ -125,6 +125,24 @@
             <div class="container">
                 <div class="head_col col-md-6 col-md-offset-3 text-center">
                     <h2>What can i offer</h2>
+                    <p>Corporis ipsam ex pariatur, numquam quae libero enim laborum quidem optio rerum tempore quod adipisci asperiores nostrum.</p>
+                </div>
+                <div class="main_offer_area col-md-10 col-md-offset-1 text-center">
+                    <div class="col-md-4">
+                            <i class="fa fa-edit"></i>
+                            <h4>Web Designing</h4>
+                            <p>Corporis numquam quae quidem optio rerum tempore quod adipisci asperiores nostrum.</p>
+                        </div>
+                        <div class="col-md-4">
+                            <i class="fa fa-laptop"></i>
+                            <h4>Web Development</h4>
+                            <p>Corporis numquam quae quidem optio rerum tempore quod adipisci asperiores nostrum.</p>
+                        </div>
+                        <div class="col-md-4">
+                            <i class="fa fa-life-saver"></i>
+                            <h4>Full Support</h4>
+                            <p>Corporis numquam quae quidem optio rerum tempore quod adipisci asperiores nostrum.</p>
+                        </div>
                 </div>
             </div>
         </section>
