--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="assets/css/owl.theme.css">
         <link rel="stylesheet" href="assets/css/animate.css">
         <link rel="stylesheet" href="assets/css/imagehover.min.css">
-        <link rel="stylesheet" href="assets/css/styles.css">
+        <link rel="stylesheet" href="assets/css/main.css">
         <link rel="stylesheet" href="assets/css/responsive.css">
         
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:100,300,400,600,700|Open+Sans:300,400,600,700,800" rel="stylesheet">
@@ -53,9 +53,9 @@
                                         <ul class="nav navbar-nav navbar-right">
                                             <li class="active"><a class="smoth-scroll" href="index.html">Home</a></li>
                                             <li><a class="smoth-scroll" href="about.html">About</a></li>
-                                            <li><a class="smoth-scroll" href="work.html">Work</a></li>
-                                            <li><a class="smoth-scroll" href="blog.html">Blog</a></li>
-                                            <li><a class="smoth-scroll" href="contact.html">Contact</a></li>
+                                            <li><a class="smoth-scroll" href=".work">Work</a></li>
+                                            <li><a class="smoth-scroll" href=".blog">Blog</a></li>
+                                            <li><a class="smoth-scroll" href=".contact">Contact</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -88,7 +88,7 @@
                         <h2>UI / UX Designer &amp; Developer</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur dignissimos doloribus ipsa non nihil, odio nostrum. Magnam at ipsa! Tenetur dolorem adipisci, a porro ut?</p>
                         <p>Pariatur ab voluptatibus accusantium fugit ipsam dignissimos voluptatum ex ducimus itaque ea laudantium, commodi ut molestias possimus! Natus, possimus deserunt!</p>
-                        <a class="btn-black">Read More</a>
+                        <a class="btn-black" href="about.html">Read More</a>
                     </div>
                     <div class="img_col col-md-5 col-sm-5">
                         <img class="img-responsive" src="assets/img/about.jpg">
