change file css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="assets/css/owl.theme.css">
         <link rel="stylesheet" href="assets/css/animate.css">
         <link rel="stylesheet" href="assets/css/imagehover.min.css">
-        <link rel="stylesheet" href="assets/css/main.css">
+        <link rel="stylesheet" href="assets/css/main.min.css">
         <link rel="stylesheet" href="assets/css/responsive.css">
         
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:100,300,400,600,700|Open+Sans:300,400,600,700,800" rel="stylesheet">
