--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                                     <div class="navbar-collapse collapse">
                                         <ul class="nav navbar-nav navbar-right">
                                             <li class="active"><a class="smoth-scroll" href="index.html">Home</a></li>
-                                            <li><a class="smoth-scroll" href="about.html">About</a></li>
+                                            <li><a class="smoth-scroll" href=".intro">About</a></li>
                                             <li><a class="smoth-scroll" href=".work">Work</a></li>
                                             <li><a class="smoth-scroll" href=".blog">Blog</a></li>
-                                            <li><a class="smoth-scroll" href=".contact">Contact</a></li>
+                                            <!-- <li><a class="smoth-scroll" href=".contact">Contact</a></li> -->
                                         </ul>
                                     </div>
                                 </div>
